force-app/main/default/objects/Retiro_Aprobacion__c/Retiro_Aprobacion__c.object-meta.xml
<CustomObject>
    <description>Objeto el cual almacenara todos los retiros para que se puedan aprobar, denegar o modificar.</description>
    <label>Retiro Aprobacion</label>
    <nameField>
        <label>Nombre de Retiro Aprobacion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retiro Aprobaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>