force-app/main/default/objects/Retiro_Aprobacion__c/fields/Aprobacion_Final__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Final__c</fullName>
    <description>Aprobación final realizada por la sub-gerente de operaciones. &apos;S&apos; o &apos;N&apos;</description>
    <label>Aprobacion Final</label>
    <length>1</length>
    <type>Text</type>
</CustomField>