force-app/main/default/objects/Retiro_Aprobacion__c/fields/AprobacionM__c.field-meta.xml
<CustomField>
    <fullName>AprobacionM__c</fullName>
    <description>Aprobacion echa por Mariel &apos;S&apos; O &apos;N&apos;</description>
    <label>AprobacionM</label>
    <length>1</length>
    <type>Text</type>
</CustomField>