force-app/main/default/objects/Retiro_Aprobacion__c/fields/banco_destino__c.field-meta.xml
<CustomField>
    <fullName>banco_destino__c</fullName>
    <label>banco destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>