force-app/main/default/objects/Retiro_Aprobacion__c/fields/cheque__c.field-meta.xml
<CustomField>
    <fullName>cheque__c</fullName>
    <label>cheque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>