force-app/main/default/objects/Retiro_Aprobacion__c/fields/compara_monto__c.field-meta.xml
<CustomField>
    <fullName>compara_monto__c</fullName>
    <label>compara monto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>