force-app/main/default/objects/Retiro_Aprobacion__c/fields/cuenta_bancaria__c.field-meta.xml
<CustomField>
    <fullName>cuenta_bancaria__c</fullName>
    <label>cuenta bancaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>