force-app/main/default/objects/Retiro_Aprobacion__c/fields/cuenta_Destino__c.field-meta.xml
<CustomField>
    <fullName>cuenta_Destino__c</fullName>
    <label>cuenta Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>