force-app/main/default/objects/Retiro_Aprobacion__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>