force-app/main/default/objects/Retiro_Aprobacion__c/fields/Fecha_SalesForce__c.field-meta.xml
<CustomField>
    <fullName>Fecha_SalesForce__c</fullName>
    <label>Fecha SalesForce</label>
    <type>Date</type>
</CustomField>