force-app/main/default/objects/Retiro_Aprobacion__c/fields/Fecha_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Sysde__c</fullName>
    <label>Fecha Sysde</label>
    <type>Date</type>
</CustomField>