force-app/main/default/objects/Retiro_Aprobacion__c/fields/Forma_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_Pago__c</fullName>
    <label>Forma Pago</label>
    <length>5</length>
    <type>Text</type>
</CustomField>