force-app/main/default/objects/Retiro_Aprobacion__c/fields/moneda__c.field-meta.xml
<CustomField>
    <fullName>moneda__c</fullName>
    <label>moneda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>