force-app/main/default/objects/Retiro_Aprobacion__c/fields/Monto_HNL__c.field-meta.xml
<CustomField>
    <fullName>Monto_HNL__c</fullName>
    <label>Monto_HNL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>