force-app/main/default/objects/Retiro_Aprobacion__c/fields/Monto_Patronal_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Monto_Patronal_Cliente__c</fullName>
    <label>Monto Patronal Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>