force-app/main/default/objects/Retiro_Aprobacion__c/fields/Monto_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Monto_Salesforce__c</fullName>
    <label>Monto Salesforce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>