force-app/main/default/objects/Retiro_Aprobacion__c/fields/Monto_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Monto_Sysde__c</fullName>
    <label>Monto Sysde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>