force-app/main/default/objects/Retiro_Aprobacion__c/fields/monto_total__c.field-meta.xml
<CustomField>
    <fullName>monto_total__c</fullName>
    <label>monto total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>