force-app/main/default/objects/Retiro_Aprobacion__c/fields/Monto_USD__c.field-meta.xml
<CustomField>
    <fullName>Monto_USD__c</fullName>
    <label>Monto USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>