force-app/main/default/objects/Retiro_Aprobacion__c/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <label>Nombre Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>