force-app/main/default/objects/Retiro_Aprobacion__c/fields/Nombre_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Propietario__c</fullName>
    <label>Nombre Propietario</label>
    <length>180</length>
    <type>Text</type>
</CustomField>