force-app/main/default/objects/Retiro_Aprobacion__c/fields/Numero_Caso__c.field-meta.xml
<CustomField>
    <fullName>Numero_Caso__c</fullName>
    <label>Numero Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>