force-app/main/default/objects/Retiro_Aprobacion__c/fields/Numero_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Numero_Referencia__c</fullName>
    <label>Numero Referencia</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>