force-app/main/default/objects/Retiro_Aprobacion__c/fields/tasa_seguridad_poblacional__c.field-meta.xml
<CustomField>
    <fullName>tasa_seguridad_poblacional__c</fullName>
    <label>tasa seguridad poblacional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>