force-app/main/default/objects/Retiro_Aprobacion__c/fields/tipo_cuenta__c.field-meta.xml
<CustomField>
    <fullName>tipo_cuenta__c</fullName>
    <label>tipo cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>