force-app/main/default/objects/Retiro_Aprobacion__c/fields/Tipo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pago__c</fullName>
    <label>Tipo_Pago</label>
    <length>15</length>
    <type>Text</type>
</CustomField>