force-app/main/default/objects/Retiro_Aprobacion__c/fields/transferencia_ACH__c.field-meta.xml
<CustomField>
    <fullName>transferencia_ACH__c</fullName>
    <label>transferencia ACH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>