force-app/main/default/objects/Retiro_Aprobacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AprobacionM__c</columns>
    <columns>Numero_Referencia__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Fecha_Sysde__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Fecha_SalesForce__c</columns>
    <columns>moneda__c</columns>
    <columns>monto_total__c</columns>
    <columns>Forma_Pago__c</columns>
    <columns>Nombre_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>